# Vulkan-Renderer-old

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
cmake/: compiler.cmake
data/shaders/: shader.vert  vert.spv
shaders/: shader.vert
src/: CMakeLists.txt  buffer_utils.cpp  buffer_utils.hpp  camera.hpp  gltf.cpp  gltf.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  main.cpp  platform.cpp  platform.hpp  shader_module.cpp  shader_module.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
